--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -5,7 +5,7 @@
       <%= link_to("投稿一覧", timelines_path) %>
     </li>
     <li>
-      <%= link_to("新規投稿", "/timelines/new") %>
+      <%= link_to("新規投稿", new_timeline_path) %>
     </li>
     <li>
       <%= link_to("編集", edit_timeline_path(1)) %>
