ホーム変更 bootstrap導入

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -66,3 +66,8 @@ img.example1 {               /* my profileの写真サイズ */
   height: auto;
   opacity: 1;
 }
+
+.hidden_show {     /* 友達とグループ画像の位置の固定化 */
+  text-align: left;
+  margin-left: 150px;
+}
