--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -32,8 +32,7 @@
       <div class="hidden_show">
         <!--非表示ここから-->
         <%= image_tag 'top_icon.png',class:'example1' %>　
-        <span>　遠藤　圭樹</span>
-        <span>(ニックネーム)</span>
+        <span>　APEX卍会</span>
         <!--ここまで-->
       </div>
     </div>
