--- a/app/views/communities/new.html.erb
+++ b/app/views/communities/new.html.erb
@@ -1,13 +1,30 @@
 <%= stylesheet_link_tag 'communities', media: 'all', 'data-turbolinks-track': 'reload' %>
+<script>
+    function previewImage(obj)
+    {
+        var fileReader = new FileReader();
+        fileReader.onload = (function() {
+            document.getElementById('preview').src = fileReader.result;
+        });
+        fileReader.readAsDataURL(obj.files[0]);
+        document.getElementById("image_text").innerHTML = "選択した画像";
+    }
+</script>
+
 <h2>コミュニティ新規作成</h2>
 
 <div id="inputs">
-  <%= form_for(@community, url: communities_path) do |f| %>
-
+  <%= form_for(@community, url: communities_path, multipart: true) do |f| %>
       <%= f.text_field :name, autocomplete: "name", class: "input" ,:placeholder=>"コミュニティ名"%>
       <%= f.text_field :content, autocomplete: "content", class: "input" ,:placeholder=>"概要"%>
   </div>
+アイコンの設定
+<%= f.file_field :icon,autocomplete: "icon", class: "input",:placeholder=>"icon" %>
+
+
     <div class="button01">
       <%= f.submit "新規作成", class:"submit_button"%>
     </div>
   <% end %>
+
+
