--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -1,31 +1,37 @@
-<%= stylesheet_link_tag 'communities', media: 'all', 'data-turbolinks-track': 'reload' %>
-<h1>コミュニティ</h1>
-<div class="btn-horizontal-border">
-<p>
-<%=link_to "コミュニティ新規作成","/communities/new"%>
-</p>
-</div>
-<% @community.each do |community| %>
-  <div class="community">
-    <%= link_to community_path(community.id) do %>
-
-      <% if community.icon? %>
-       <%= image_tag "/communities_image/#{community.icon}",class: "community_icon_edit"%><br>
-      <% else %>
-        <%= image_tag /"default_icon"/, class: "community_icon_edit" %><br>
-     <% end %>
-
-    <div class="userid">
-      <%= @user.find(community.user_id).nickname %><br>
+<html>
+  <%= stylesheet_link_tag 'communities', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <h1>コミュニティ</h1>
+    <div class="btn-horizontal-border">
+      <p>
+      <%=link_to "コミュニティ新規作成","/communities/new"%>
+      </p>
     </div>
-
-    <div class="community_name">
-      <%= community.name%><br>
+  <div class="container">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4  g-lg-4">
+      <% @community.each do |community| %>
+        <%= link_to community_path(community.id), style: "text-decoration: none" do %>
+          <div class="col">
+            <div class="card h-100">
+              <% if community.icon? %>
+                <%= image_tag "/communities_image/#{community.icon}",class: "card-img-top",width: "300",height: "300" %><br>
+              <% else %>
+                <%= image_tag /"default_icon"/, class: "card-img-top",width: "300",height: "300"%><br>
+              <% end %>
+              <div class="card-body">
+                <h5 class="card-title"><%= community.name%></h5>
+                <p class="card-text"><%= community.content %></p>
+              </div>
+              <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Created by <%= @user.find(community.user_id).nickname %></small>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      <% end %>
     </div>
-
-    <div class="community_content">
-      <%= community.content %><br>
-    </div>
-<% end %>
   </div>
-  <% end %>
+</html>
