マイページ bootstrap導入

--- a/app/assets/stylesheets/mypages.scss
+++ b/app/assets/stylesheets/mypages.scss
@@ -13,6 +13,7 @@ body{
   top:-200px;
   left: 150px;
   font-size:50px;
+
 }
 .myicon{
   width: 150px;
@@ -20,6 +21,6 @@ body{
 
 }
 .profile{
-  position: relative;
   top:-180px;
+  width: 200px;
 }
