--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,44 +1,109 @@
 <%= javascript_pack_tag 'pages/index' %>
 <%= stylesheet_link_tag 'pages', media: 'all', 'data-turbolinks-track': 'reload' %>
 
-<div class="row">
-<div class="col-md-6" style="background: white; height: 600px;">            <!--左画面の作成-->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+<div class="row ">
+<div class="col-md-6" style="background: white; height: 650px;">            <!--左画面の作成-->
+<br>
   <div class="profile">　　                                                  <!--my profile&name表示-->
     <%= image_tag 'top_icon.png',class:'example1' %>　
-    <span>　友杉　颯太</span>
+    <span>友杉　颯太</span>
     <span>(ニックネーム)</span>
   </div>
-  <br>　
+ <br>
   <form id="form1" action="自分のサイトURL" method="get">                     <!--検索ボックス作成-->
     <input id="sbox1" id="s" name="s" type="text" placeholder="友達を検索" />
     <input id="sbtn1" type="submit" value="検索" /></form>
-<br>
 
-  <div class="hidden_box">
-    <label for="label1">友達</label>
-    <input type="checkbox" id="label1"/>
-    <div class="hidden_show">
-      <!--非表示ここから-->
+
+  <button
+    type="button"
+    class="btn btn-secondary btn-lg w-100 mt-2"
+    style="margin: 7px"
+    data-toggle="collapse"
+    data-target="#collapseExample1"
+    aria-expanded="false"
+    aria-controls="collapseExample1"
+  >
+    お気に入り
+  </button>
+  <!-- /トリガーとなるリンク&ボタン -->
+
+  <!-- 対象のコンテンツ -->
+  <div class="collapse show" id="collapseExample1">
       <%= image_tag 'top_icon.png',class:'example1' %>　
-      <span>　須山　龍</span>
+      <span>須山　龍</span>
       <span>(ニックネーム)</span>
-      <!--ここまで-->
-    </div>
+  </div>
 
-    <div class="hidden_box">
-      <label for="label2">グループ</label>
-      <input type="checkbox" id="label2"/>
-      <div class="hidden_show">
-        <!--非表示ここから-->
-        <%= image_tag 'top_icon.png',class:'example1' %>　
-        <span>　APEX卍会</span>
-        <!--ここまで-->
-      </div>
+  <button
+    type="button"
+    class="btn btn-secondary btn-lg w-100 mt-2"
+    style="margin: 7px"
+    data-toggle="collapse"
+    data-target="#collapseExample2"
+    aria-expanded="false"
+    aria-controls="collapseExample2"
+  >
+    友達
+  </button>
+  <!-- /トリガーとなるリンク&ボタン -->
+
+  <!-- 対象のコンテンツ -->
+  <div class="collapse show" id="collapseExample2" >
+      <%= image_tag 'top_icon.png',class:'example1' %>　
+      <span>遠藤　圭樹</span>
+      <span>(ニックネーム)</span>
     </div>
   </div>
-</div>                                                                      <!--左画面の作成ここまで-->
+                                                                    <!--左画面の作成ここまで-->
 
-<div class="col-md-6" style="background: blue; height: 600px;">　</div>     <!--右画面制作-->
+<div class="col-md-6" style="background: white; height: 650px;">　
 
+ <br>
+  <form id="form2" action="自分のサイトURL" method="get">                     <!--検索ボックス作成-->
+    <input id="sbox1" id="s" name="s" type="text" placeholder="グループを検索" />
+    <input id="sbtn1" type="submit" value="検索" /></form>
+
+  <button
+    type="button"
+    class="btn btn-secondary btn-lg w-100 mt-2"
+    style="margin: 7px"
+    data-toggle="collapse"
+    data-target="#collapseExample3"
+    aria-expanded="false"
+    aria-controls="collapseExample3"
+  >
+    お気に入り
+  </button>
+  <!-- /トリガーとなるリンク&ボタン -->
+
+  <!-- 対象のコンテンツ -->
+  <div class="collapse show" id="collapseExample3">
+    <%= image_tag 'top_icon.png',class:'example1' %>　
+    <span>とある愛好家</span>
+  </div>
+
+  <button
+    type="button"
+    class="btn btn-secondary btn-lg w-100 mt-2"
+    style="margin: 7px"
+    data-toggle="collapse"
+    data-target="#collapseExample4"
+    aria-expanded="false"
+    aria-controls="collapseExample4"
+  >
+    コミュニティ
+  </button>
+  <!-- /トリガーとなるリンク&ボタン -->
+
+  <!-- 対象のコンテンツ -->
+  <div class="collapse show" id="collapseExample4" >
+    <%= image_tag 'top_icon.png',class:'example1' %>　
+    <span>　東京卍会</span>
+  </div>
+</div>     <!--右画面制作-->
 </div>
