コミュニティの表示を統一するように変更

--- a/app/assets/stylesheets/communities.scss
+++ b/app/assets/stylesheets/communities.scss
@@ -96,7 +96,8 @@ html{
   text-align: center;
 }
 .card-text{
-  font-size: 20px;
+  height: 150px;
+  font-size: 17px;
 }
 .userid{
   font-size: 2px;
@@ -105,3 +106,4 @@ html{
   position: center;
   align-items: center;
 }
+
