画像投稿の修正

--- a/app/assets/stylesheets/mypages.scss
+++ b/app/assets/stylesheets/mypages.scss
@@ -1,11 +1,3 @@
-// Place all the styles related to the mypages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
-.body{
-padding-left: 13%;
-
-}
-
 p{
   text-align: center;
 }
@@ -16,208 +8,14 @@ p{
   margin: 0px 25% 0px 30%;
 }
 
-#preview{
-  border-radius: 50%;
-}
 
-.user_icon{
-  border-radius: 50%;
-}
 
-.form1{
+.form_uploder{
   display: block;
   justify-content: center;
   align-items: center;
 }
 
 .image_select {
-display: none;
-}
-
-
-h1 {
-  margin-bottom: 60px;
-}
-
-
-
-.box_inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.arrows {
-  display: table;
-  width: 100%;
-  position: absolute;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-  top: 50%;
-}
-
-.arrow_left {
-  display: table-cell;
-  width: 50%;
-  padding-left: 5px;
-  box-sizing: border-box;
-}
-
-.box_load_inner {
-  display: block;
-}
-
-.arrow_rigth {
-  display: table-cell;
-  width: 50%;
-  text-align: right;
-  padding-right: 5px;
-  box-sizing: border-box;
-}
-
-.arrow_span {
-  font-weight: bold;
-  cursor: pointer;
-  -webkit-transition: .3s;
-  transition: .3s;
-}
-
-.arrow_span:hover {
-  color: #f00;
-}
-
-.close {
-  position: absolute;
-  right: 5px;
-  top: 10px;
-  cursor: pointer;
-}
-
-.box_cover {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: -1;
-  opacity: 0;
-  -webkit-transition: .3s;
-  transition: .3s;
-}
-
-.box_cover.active {
-  z-index: 10;
-  opacity: 1;
-}
-
-.box {
-  position: fixed;
-  width: 90%;
-  max-width: 600px;
-  height: 90%;
-  max-height: 700px;
-  top: 50%;
-  left: 50%;
-  padding: 10px;
-  box-sizing: border-box;
-  z-index: -1;
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transition: .3s;
-  transition: .3s;
-  transform: translate(-50%, -50%);
-  overflow: hidden;
-}
-
-.box.active {
-  z-index: 15;
-  opacity: 1;
-  visibility: visible;
-}
-
-.box_load>li {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.box_load_inner {
-  padding: 10px 30px;
-  box-sizing: border-box;
-}
-
-.load_0 {
-  background: #c0f8c2;
-}
-
-.load_1 {
-  background: #f8eac0;
-}
-
-.load_2 {
-  background: #cdffe8;
-}
-
-.load_3 {
-  background: #ffd2d4;
-}
-
-.box_load_cover {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  top: 0;
-  left: 0;
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-
-.link_list li {
-  cursor: pointer;
-  -webkit-transition: .3s;
-  transition: .3s;
-}
-
-.link_list li:hover {
-  background: #ddd;
-  cursor: pointer;
-}
-.btn{
-  font-size: 1.4rem;
-  font-weight: 700;
-  line-height: 1;
-  position: relative;
-  display: inline-block;
-  padding: 1rem 4rem;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  text-align: center;
-  vertical-align: middle;
-  text-decoration: none;
-  letter-spacing: 0.1em;
-  color: #212529;
-  border-radius: 0.5rem;
-  align-items: center;
-  margin: 0px 25% 0px 20%;
-}
-
-.btn--orange,
-a.btn--orange {
-  color: #fff;
-  background-color: #037394;
-}
-
-.btn--orange:hover,
-a.btn--orange:hover {
-  color: #fff;
-  background: #f56500;
+  display: none;
 }
