--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -1,15 +1,29 @@
+<head>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <%= stylesheet_link_tag 'timelines', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <ul class="header-menus">
+<%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
-    <li>
-      <%= link_to("投稿一覧", timelines_path) %>
-    </li>
-    <li>
-      <%= link_to("新規投稿", new_timeline_path) %>
-    </li>
-    <li>
-      <%= link_to("編集", edit_timeline_path(1)) %>
-    </li>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
+</head>
+
+
+<div class="border border-5 rounded" style="margin: 50px">
+
+  <div class="timeline mx-auto" >
+  <ul class="header-menus">
+      <%= form_for(@create ,url:timelines_path) do |f|%>
+        <div class="form-group">
+          <%= f.text_area :content, placeholder:"どしたん？",class: "form-control" %>
+        </div>
+        <%= f.submit "投稿"%>
+      <% end %>
   </ul>
 <div class="activity" >
   <% @posts.each do |post| %>
