--- a/app/assets/stylesheets/mypages.scss
+++ b/app/assets/stylesheets/mypages.scss
@@ -2,25 +2,22 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .header{
-  font-size:20px;
 }
 body{
-  font-size:30px;
-  top:-300px;
 }
-.right{
+.top{
   position: relative;
-  top:-200px;
-  left: 150px;
-  font-size:50px;
+
+
 
 }
 .myicon{
-  width: 150px;
-  height: 150px;
+  width: 120px;
+  height: 120px;
 
 }
 .profile{
-  top:-180px;
-  width: 200px;
+}
+p{
+  top:-80px;
 }
