--- a/app/views/mypages/edit.html.erb
+++ b/app/views/mypages/edit.html.erb
@@ -1,38 +1,52 @@
 <%= stylesheet_link_tag "mypages"%>
 
 <div class="header">
-  マイページ
+  編集ページ
 </div>
 
 <p>
-
+<div class="row">
+<div class="col-md-auto">
   <%= image_tag 'background2.jpg',class:'myicon' %>
-<div class="right">
+</div>
+<div class="col-md-auto">
+  <div class="top">
+  <p class="h6">ニックネーム</p>
   <%= current_user.nickname %><br>
+  <p class="h6">ユーザーID</p>
   <%= current_user.userid %>
-
+  </div>
+</div>
 </div>
 <div class="mw-100 p-3" style="background-color: #eee;">
-  <div class="profile"style="width:750px">
+  <div class="profile"style="width:auto">
   <%= form_for @profile, url: mypage_path  do |f| %>
 
-   <div class="form-group">
-         学生<br><%= f.select :grade, [["情報処理科1年", "情報処理科1年"],["情報処理科2年", "情報処理科2年"],["実践IoT1年", "実践IoT1年"],["実践IoT2年", "実践IoT2年"],
+      <div class="m-1">
+         学科<br><%= f.select :grade, [["情報処理科1年", "情報処理科1年"],["情報処理科2年", "情報処理科2年"],["実践IoT1年", "実践IoT1年"],["実践IoT2年", "実践IoT2年"],
                                       ["Web技術科1年", "Web技術科1年"],["Web技術科2年", "Web技術科2年"],["ビジネス科1年", "ビジネス科1年"],["ビジネス科2年", "ビジネス科2年"],
                                       ["先端ITシステム1年", "先端ITシステム1年"],["先端ITシステム2年", "先端ITシステム2年"],["先端ITシステム3年", "先端ITシステム3年"],["ITライセンス1年", "ITライセンス1年"],
                                       ["実践AI科1年", "実践AI科1年"],["実践AI科2年", "実践AI科2年"],["実践AI科3年", "実践AI科3年"],["実践AI科4年", "実践AI科4年"],
                                       ["情報セキュリティ学科1年", "情報セキュリティ学科1年"],["情報セキュリティ学科2年", "情報セキュリティ学科2年"],["情報セキュリティ学科3年", "情報セキュリティ学科3年"],["情報セキュリティ学科4年", "情報セキュリティ学科4年"]],class:'form-control',include_blank: "学科",autocomplete:"grade"%>
-   </div>
-      <div class="form-group">
-       クラス<br><%= f.select :school_class, [["1", "1"], ["2", "2"], ["3", "3"],["4", "4"],["5", "5"],["6", "6"],["7", "7"],["8", "8"],["9", "9"],["10", "10"]], class:'form-control',include_blank: "クラス", autocomplete:"school_class" %>
       </div>
+        <div class="m-1">
+       クラス<br><%= f.select :school_class, [["1", "1"], ["2", "2"], ["3", "3"],["4", "4"],["5", "5"],["6", "6"],["7", "7"],["8", "8"],["9", "9"],["10", "10"]], class:'form-control',include_blank: "クラス", autocomplete:"school_class" %>
+        </div>
+      <div class="m-1">
         番号<br><%= f.text_field :number,class:'form-control',autocomplete:"number" %>
-    <br>学籍番号<br><%= f.text_field :student_id,class:'form-control',autocomplete:"student_id" %><br>
+      </div>
+      <div class="m-1">
+      学籍番号<br><%= f.text_field :student_id,class:'form-control',autocomplete:"student_id" %>
+      </div>
+        <div class="m-1">
     取得資格<br>
-    <%= f.text_area :accreditation,class:'form-control',autocomplete:"accreditation" %><br>
-    タグ、趣味<br>
-    <%= f.text_area :hobby,class:'form-control',autocomplete:"hobby"%><br>
-    <%=f.submit "更新" %>
+    <%= f.text_area :accreditation,class:'form-control',autocomplete:"accreditation" %>
+        </div>
+      <div class="m-1">
+      タグ、趣味
+    <%= f.text_area :hobby,class:'form-control',autocomplete:"hobby"%>
+
+        <%=f.submit "更新",class:'btn btn-outline-primary btn-lg m-1'%>
    </div>
       </div>
   </p>
