--- a/app/views/mypages/index.html.erb
+++ b/app/views/mypages/index.html.erb
@@ -1,23 +1,43 @@
 <%= stylesheet_link_tag "mypages"%>
-<div class="header">
+
   マイページ
-</div>
+
 <body>
 
 <p>
-<div class="col-2">
-  <%= image_tag 'background2.jpg',class:'myicon' %>
-</div>
+   <div class="row">
+         <div class="col-md-auto">
+               <%= image_tag 'background2.jpg',class:'myicon'%>
+         </div>
+         <div class="col-md-auto">
+           <div class="top">
+                     <p class="h6">ニックネーム</p>
+                     <%= current_user.nickname %><br>
+                     <p class="h6">ユーザーID</p>
+                    <%= current_user.userid %>
+          </div>
+         </div>
+   </div>
+             <div style=background-color:#eee;">
+             <div class="m-3"style="width:auto",style="background-color:#eee;">
+                   <%= link_to "編集", edit_mypage_path(current_user.id),class:'btn btn-outline-primary btn-lg m-1'%><br>
+               <div class="m-1">
+               学科：<%= @profiles.grade%><br>
+               </div>
+                 <div class="m-1">
+                 クラス：<%=@profiles.school_class%><br>
+                 </div>
+                   <div class="m-1">
+                   出席番号：<%=@profiles.number %><br>
+                   </div>
+                     <div class="m-1">
+                       学籍番号：<%=@profiles.student_id%><br>
+                     </div>
+               取得資格<br><div class="border border-dark bg-white m-1"><%=  @profiles.accreditation %><br></div>
 
-  <div class="right" ><div class="col-8">
-  ニックネーム：<%= current_user.userid %><br>
-  ID：<%= current_user.userid %><br>
-  学科：<%= @profiles.grade %><br>
-  クラス：<%=@profiles.school_class%><br>
-  出席番号<%=@profiles.number %><br>
-  学籍番号<%=@profiles.student_id%><br>
-  取得資格<br><%=  @profiles.accreditation %><br>
-  タグ、趣味<br><%= @profiles.hobby %><br>
-  <%= link_to "編集", edit_mypage_path(current_user.id) %>
+                         タグ、趣味<br><div class="border border-dark bg-white m-1"><%= @profiles.hobby %><br></div>
+                 　　
+            </div>
+            </div>
 </div>
-  </div>
+</body>
