コミュニティタグの実装を開始

--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -21,6 +21,13 @@
                   <h5 class="card-title"><%= community.name %></h5>
                   <p class="card-text"><%= community.content .truncate(100, omission: '...')%></p>
                 </div>
+                <div class="card">
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Cras justo odio</li>
+                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                    <li class="list-group-item">Vestibulum at eros</li>
+                  </ul>
+                </div>
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
