--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,69 +1,59 @@
-html {
-  background-image: image-url("background.jpg");
-  background-size: cover;
-  font-family: 'Kiwi Maru', serif;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  font-size: 62.5%;
-  display: table;
-  width: 100%;
-  height: 100%;
+html{
 
 }
 
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: inherit;
-  box-sizing: inherit;
+/*
+ * Globals
+ */
+
+
+/* Custom default button */
+.btn-secondary,
+.btn-secondary:hover,
+.btn-secondary:focus {
+  color: #333;
+  text-shadow: none; /* Prevent inheritance from `body` */
 }
+
+
+/*
+ * Base structure
+ */
 
 body {
-  display: table-cell;
-  text-align: center;
-  vertical-align: middle;
-  padding: 30px;
+  background-image: image-url("background.jpg");
+  background-size: cover;
+  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: inherit;
-  box-sizing: inherit;
+.cover-container {
+  max-width: 42em;
 }
 
-header{
-  background-color: #037394;
-  width: 100%;
-  height: auto;
-  border-bottom: solid 2px;
-  box-sizing: border-box;
-  position: fixed;
-  top: 0;
-  left: 0;
-  text-align: right;
+
+/*
+ * Header
+ */
+
+.nav-masthead .nav-link {
+  padding: .25rem 0;
+  font-weight: 700;
+  color: rgba(0, 0, 0,.8);
+  background-color: transparent;
+  border-bottom: .25rem solid transparent;
 }
 
-.header_icon{
-  border-radius: 50%;
-  background-color: #FFFFFF;
-  position: fixed ;
-  top: 0;
-  left: 0;
-  max-width: 8%;
-  max-height: 8%;
-  border: solid #212529 2px;
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  border-bottom-color: rgba(255, 255, 255, .25);
 }
 
-.Link{
-  padding-right: 15px;
-  text-decoration: none;
-  font-size: 1.6rem;
-  top: 0;
-  color: #FFF
+.nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem;
 }
 
-.Link:hover{
-  background-color: #2083c8;
-  color: #FFFFFF;
+.nav-masthead .active {
+  color: #fff;
+  border-bottom-color: #fff;
 }
