--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,101 +1,6 @@
-html{
-  display: table;
-  width: 100%;
-  height: 100%;
-  background-image: image-url("background.jpg");
-  background-size: cover;
-  font-family: 'Kiwi Maru', serif;
-}
-body {
-  display: table-cell;
-  text-align: center;
-  vertical-align: middle;
-}
-
-img {
-  max-width: 100%;
-  max-height: 100%;
+.icon{
   border-radius: 50px;
-  background: #e0e0e0;
+  background: linear-gradient(145deg, #f0f0f0, #cacaca);
   box-shadow:  20px 20px 60px #bebebe,
   -20px -20px 60px #ffffff;
-}
-
-.title-image{
-  display: none;
-}
-
-.title-text{
-  font-size: 18px;
-  opacity: 0;
-  max-width: 100%;
-  max-height: 100%;
-}
-
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: inherit;
-  box-sizing: inherit;
-}
-
-html {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  font-size: 62.5%;
-}
-
-body {
-  padding: 30px;
-}
-
-.buttons{
-  opacity: 0;
-}
-
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: inherit;
-  box-sizing: inherit;
-}
-
-html {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  font-size: 62.5%;
-}
-
-.btn{
-  font-size: 1.6rem;
-  font-weight: 700;
-  line-height: 1.5;
-  position: relative;
-  display: inline-block;
-  padding: 1rem 4rem;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  text-align: center;
-  vertical-align: middle;
-  text-decoration: none;
-  letter-spacing: 0.1em;
-  color: #212529;
-  border-radius: 0.5rem;
-}
-
-.btn--orange,
-a.btn--orange {
-  color: #fff;
-  background-color: #037394;
-}
-
-.btn--orange:hover,
-a.btn--orange:hover {
-  color: #fff;
-  background: #f56500;
 }
