--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,12 +21,12 @@
 
       <nav class="navbar navbar-expand-lg navbar-light p-0 m-0">
         <div class="container-fluid">
-          <% if @user.image? %>
+          <% if @user.image.nil? %>
+            <%= image_tag "/user_images/default_icon.png" , class: "user_icon" %>
+          <% else %>
             <%= link_to  pages_show_path ,class: "link" do%>
             <%= image_tag "/user_images/#{@user.image}",class: "user_icon"%>
-              <% end %>
-          <% else %>
-            <%= image_tag "default_icon" , class: "user_icon" %>
+            <% end %>
           <% end %>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
